# ScientificSimulator

./: .gitignore  CMakeLists.txt  build.sh  projects.md  run.sh
app/: main.cpp
app/include/components/: box.hpp  camera.hpp  camera_controller.hpp  capsule.hpp  collider.hpp  cylinder.hpp  grid.hpp  plane.hpp  renderable.hpp  skybox.hpp  sphere.hpp  transform.hpp
app/include/core/: app.hpp  event_state.hpp  window.hpp
app/include/entities/: entity.hpp  registry.hpp  storage.hpp
app/include/graphics/: material.hpp  mesh.hpp  texture.hpp  vertex.hpp
app/include/math/: mat4.hpp  quat.hpp  vec3.hpp
app/include/scene/: scene.hpp  scene_manager.hpp
app/include/systems/: camera_controller_system.hpp  render_system.hpp
app/src/core/: app.cpp  event_state.cpp  window.cpp
app/src/entities/: registry.cpp
app/src/scene/: scene_manager.cpp
app/src/systems/: camera_controller_system.cpp  render_system.cpp
